# fcitx-bogo

./: CMakeLists.txt  CONTRIBUTE.md  README.md  config.h.in
data/: CMakeLists.txt
src/: CMakeLists.txt  README.md  bogo-im.c  bogo.conf.in  fcitx-bogo.conf.in  python3compat.h
